# dynamic_cast

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/dynamic_cast/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
cmake/: addTest.cmake  bootstrap.cmake  component.cmake
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart
lib/auth/: AuthService.dart
lib/data/: itunes_podcast.dart  itunes_podcast.g.dart
lib/gui/: custom_theme.dart  theme.dart
lib/gui/components/: input_boxes.dart  podcast_search_bar.dart
lib/gui/components/search/: podcast_search_bar.dart  search_result.dart
lib/gui/screens/dashboards/: dashboard.dart  podcasts.dart
lib/gui/screens/podcast_view/: feed.dart  feed_episode_tile_play_button.dart
lib/gui/screens/sign_in/: credential_screen.dart  sign_in_or_up.dart  sign_up.dart
lib/gui/screens/sign_in/dashboards/: dashboard.dart  podcasts.dart
lib/i18n/: translation.dart
lib/mock/: data_src.dart
lib/model/: model.dart
lib/utils/: version.dart
src/backend/: CMakeLists.txt
src/backend/include/dc_backend/: searchprovider.hpp
src/backend/include/dcbackend/: feedcontroller.hpp  feedparser.hpp  feedprovider.hpp  networkprovider.hpp  searchcontroller.hpp  searchprovider.hpp
src/backend/src/: feedcontroller.cpp  feedparser.cpp  feedprovider.cpp  networkprovider.cpp  searchcontroller.cpp  searchprovider.cpp
src/backend/tests/: CMakeLists.txt  tst_feedcontroller.cpp  tst_feedparser.cpp  tst_feedprovider.cpp  tst_searchcontroller.cpp  tst_searchprovider.cpp
src/common/: CMakeLists.txt
src/common/include/: expected.hpp
src/common/include/dccommon/: expected.hpp  qtext.hpp
src/common/src/: qtext.cpp
src/common/tests/: CMakeLists.txt  tst_expected.cpp
src/core/: CMakeLists.txt
src/core/include/dccore/: audioplayer.hpp
src/core/src/: audioplayer.cpp
src/dynamic_cast/: CMakeLists.txt
src/dynamic_cast/src/: main.cpp
src/gallery/: CMakeLists.txt
src/gallery/src/: Gallery.qml  GalleryMain.qml  main.cpp
src/gallery/src/previews/: BottomNavBarPreview.qml  EpisodeListItemPreview.qml  MiniPlayerPreview.qml  PodcastArtworkCardPreview.qml  PodcastOverviewPreview.qml  PodcastPagePreview.qml  PodcastResultRowPreview.qml  SearchBarPreview.qml  SearchPagePreview.qml  SubscriptionsPagePreview.qml
src/gallery/tests/: CMakeLists.txt  tst_gallery_ui.cpp
src/qml/: CMakeLists.txt
src/qml/src/: AppNavigation.qml  AppRouter.qml  Main.qml  Theme.qml
src/qml/src/components/: BottomNavBar.qml  EpisodeListItem.qml  MiniPlayer.qml  PodcastArtworkCard.qml  PodcastOverview.qml  PodcastResultRow.qml  SearchBar.qml
src/qml/src/pages/: DownloadsPage.qml  HomePage.qml  PodcastPage.qml  SearchPage.qml  SubscriptionsPage.qml
test/: widget_test.dart
web/: index.html  manifest.json
